syntax = "proto3";
package transport;
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
	info: {
		title: "Feedback service";
		version: "1.0";
		contact: {
			name: "Kiet Thanh Vo";
			url: "https://github.com/vothanhkiet/grab-bootcamp";
			email: "vothanhkiet@gmail.com";
        };
    };
    schemes: [HTTP, HTTPS];
    consumes: "application/json";
    produces: "application/json";
};
message Error {
    int32 code = 1 [
        (grpc.gateway.protoc_gen_swagger.options.openapiv2_field) = {
            description: "Error code", default: "0", 
        }
    ];
    string message = 2;
}

message Paging {
    int32 total = 1;
    int32 offset = 2;
    int32 limit = 3;
}

message PassengerFeedback {
    string feedbackID = 1;
    string bookingCode = 2;
    // Should be string?
    int32 passengerID = 3;
    string feedback    = 4;
}

message AddPassengerFeedbackRequest {
    PassengerFeedback feedback = 1;
}

message AddPassengerFeedbackResponse {
    repeated Error errors = 1;
}

message ListPassengerFeedbackRequest {
    int32 limit = 1;
    int32 offset = 2;
    string bookingCode = 3;
    int32 passengerID = 4;
}

message ListPassengerFeedbackResponse {
    repeated Error errors = 1;
    Paging paging = 2;
    repeated PassengerFeedback data = 3;
}

message DeleteFeedBackRequest {
    int32 passengerID = 4;
}

message DeleteFeedBackResponse {
    repeated Error errors = 1;
    repeated string feedbackIds = 2;
}



service FeedbackService {
    rpc AddFeedback(AddPassengerFeedbackRequest) returns (AddPassengerFeedbackResponse) {
        option (google.api.http) = {
            post: "/v1/feedback"
            body: "feedback"
            response_body: "*"
        };
    }
    rpc ListFeedBack(ListPassengerFeedbackRequest) returns (ListPassengerFeedbackResponse) {
        option (google.api.http) = {
            get: "/v1/feedback"
            response_body: "*"
        };
    }
    rpc DeleteFeedback(DeleteFeedBackRequest) returns (DeleteFeedBackResponse) {
        option (google.api.http) = {
            delete: "/v1/feedback"
            response_body: "*"
        };
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Delete feedback";
			summary: "Delete feedback";
            tags: "feedback";
        };
    }
}